@@ -5,6 +5,8 @@ TODO:
 - bird and netsnmp don't build with more than one job
 - deco
 
+revison 66:
+- small fixes in download-toolchain.mk, kernel/Config.in and make/deco/Config.in
 revision 65:
 - worked on precompiled toolchain
 - fixed netsnmp-package
